Fixed width issue on mobile device

--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -93,22 +93,10 @@
 
 
 
-
-
-
-
-
 .blurb
   max-width: 750px
   padding: 0 15px
   margin: 50px auto
-  font-size: 20px
+  font-size: 100px
   font-weight: 30
   text-align: center
-
-.blurb-blog
-  max-width: 750px
-  padding: 0 15px
-  margin: 50px auto
-  font-size: 20px
-  font-weight: 30
