--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -875,16 +875,9 @@ footer {
   max-width: 750px;
   padding: 0 15px;
   margin: 50px auto;
-  font-size: 20px;
+  font-size: 100px;
   font-weight: 30;
   text-align: center; }
-
-.blurb-blog {
-  max-width: 750px;
-  padding: 0 15px;
-  margin: 50px auto;
-  font-size: 20px;
-  font-weight: 30; }
 
 .section-contact {
   background: #e5eaee;
@@ -1261,103 +1254,93 @@ form {
     form label span {
       display: block; }
 
-.post-header {
-  max-width: 750px;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0 auto;
-  -webkit-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  -webkit-box-pack: justify;
-  box-pack: justify;
-  -webkit-justify-content: space-between;
-  -moz-justify-content: space-between;
-  -ms-justify-content: space-between;
-  -o-justify-content: space-between;
-  justify-content: space-between;
-  -ms-flex-pack: justify; }
+@media only screen and (min-width: 220px) {
+  .post-header {
+    max-width: 290px;
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 10 auto;
+    -webkit-box-align: center;
+    box-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    -o-align-items: center;
+    align-items: center;
+    -ms-flex-align: center;
+    -webkit-box-pack: justify;
+    box-pack: justify;
+    -webkit-justify-content: space-between;
+    -moz-justify-content: space-between;
+    -ms-justify-content: space-between;
+    -o-justify-content: space-between;
+    justify-content: space-between;
+    -ms-flex-pack: justify; }
+  .title:hover {
+    max-width: 250px;
+    padding-left: 10px;
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    box-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    -o-align-items: center;
+    align-items: center;
+    -ms-flex-align: center;
+    -webkit-box-pack: justify;
+    box-pack: justify;
+    -webkit-justify-content: space-between;
+    -moz-justify-content: space-between;
+    -ms-justify-content: space-between;
+    -o-justify-content: space-between;
+    justify-content: space-between;
+    -ms-flex-pack: justify; }
+  .post-title {
+    font-size: 42px;
+    letter-spacing: -1px;
+    line-height: 1; }
+  .post-meta {
+    margin-bottom: 0px; }
+  .post-link {
+    display: block;
+    font-size: 40px; }
+  .post-wrapper {
+    max-width: 300px;
+    margin: 0 auto;
+    font-size: 22px; }
+  .comment {
+    max-width: 290px;
+    margin: 0 auto;
+    padding-bottom: 100px; }
+  .blurb-blog {
+    font-size: 15px;
+    font-weight: 30; } }
 
-.title:hover {
-  max-width: 750px;
-  padding-left: 10px;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  -webkit-box-pack: justify;
-  box-pack: justify;
-  -webkit-justify-content: space-between;
-  -moz-justify-content: space-between;
-  -ms-justify-content: space-between;
-  -o-justify-content: space-between;
-  justify-content: space-between;
-  -ms-flex-pack: justify; }
-
-.post-title {
-  font-size: 42px;
-  letter-spacing: -1px;
-  line-height: 1; }
-
-.post-meta {
-  margin-bottom: 0px; }
-
-.post-link {
-  display: block;
-  font-size: 42px; }
-
-.post {
-  max-width: 780px;
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0 auto;
-  -webkit-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  -webkit-box-pack: justify;
-  box-pack: justify;
-  -webkit-justify-content: space-between;
-  -moz-justify-content: space-between;
-  -ms-justify-content: space-between;
-  -o-justify-content: space-between;
-  justify-content: space-between;
-  -ms-flex-pack: justify; }
-
-.comment {
-  max-width: 780px;
-  margin: 0 auto;
-  padding-bottom: 100px; }
+@media only screen and (min-width: 1070px) {
+  .post-header {
+    max-width: 750px;
+    margin: 0 auto; }
+  .title:hover {
+    max-width: 750px; }
+  .post-wrapper {
+    max-width: 780px; }
+  .comment {
+    max-width: 780px; }
+  .blurb-blog {
+    font-size: 22px;
+    font-weight: 30; } }
 
 #h_small {
   height: 170px;
